add finish lesson
